--- a/index.html
+++ b/index.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
-<html>
+<!-- defining the size -> width/ height -> box-sizing:border-box
+*{
+    box-sizing: border-box;
+// apply to all elements!
+}
+
+
+-->
+<html lang = "en">
     <head>
-        <title>HELLO COURSERA</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/styles.css">
+        <title>Unordered lists</title>
     </head>
     <body>
-        <h1>Hello coursera this is  a modified page</h1>
+        <h1>Unordered list</h1>
+        <header><ul>
+            <li><a href = "float_example.html"  target = "_blank"  title = "float-el-link">Floating some elements</a></li>
+            <li><a href="same-dir.html" title = "same-dir-link" target = "_blank">Same directory html</a></li>
+        </ul>
+        <header>
+
+        <!--<h2><del>This will be  a comment</del></h2>-->
+       <div>
+        <div><img  src = "img/shopping_list.jpg" id = "shopping-list"></div>
+            
+        <div class = "div-my-class">
+            <div>My typical dinner shopping list:</div>
+            <ul>
+            <li>Milk</li>
+            <li> Carrots</li>
+            <li id = "my-pink-el">Fruits
+                <ul>
+                    <li>Apples</li>
+                    <li>Oranges</li>
+                    <li>Pineapple</li>
+                </ul>
+            </li>
+            <li>Bread</li>
+        </ul>
+        <div>Shopping order</div>
+        <ol >
+            <li>Buy bread</li>
+            <li>Get dairy</li>
+            <li>Go round fruits
+                <ul>
+                    <li>apples</li>
+                    <li>oranges</li>
+                    <li>pineapples</li>
+                </ul>
+            </li>
+            <li> Proceed to checkout</li>
+        </ol>
+       </div>
+    </div>
     </body>
 </html>
